--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a class="active" href="#index">Assignments</a></li>
       </ul>
     </span>
+       <a href="../../php/Week03/survey.php">Assignment 03</a>
 <p>COMING SOON</p>
 <!--   <div id="statement">
      <ul>
