--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <li><a class="active" href="#index">Assignments</a></li>
       </ul>
     </span>
-       <a href="../../php/Week03/survey.php">Assignment 03</a>
-<p>COMING SOON</p>
+<p>       <a href="../../php/Week03/survey.php">Assignment 03</a></p>
+
 <!--   <div id="statement">
      <ul>
        <li><a href="week02/assign02.html">Assignment 02</a></li>
